Alignment fix for logo text in mobile view

--- a/src/scss/_aside.scss
+++ b/src/scss/_aside.scss
@@ -61,9 +61,6 @@ aside.aside {
       margin-right: $default-padding * .5;
     }
 
-    .is-gk-blue{
-      color: #000080;
-    }
   }
 
   .menu-list {
